sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: type int
	var v:int = 0
              ^DutchFlagAlgo:4: error: not found: value to
  for(i<- to getTaille()-1){
          ^DutchFlagAlgo:4: error: value - is not a member of Unit
  for(i<- to getTaille()-1){
                        ^